[package]
name = "auramark_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
dotenv = "0.15.0"
ffmpeg-next = "7.1.0"
hex = "0.4.3"
hex-literal = "1.0.0"
hmac = "0.12.1"
image = "0.25.6"
ndarray = "0.16.1"
rand = "0.9.1"
rand_chacha = "0.9.0"
reed_solomon_rs = "0.1.2"
rustdct = "0.7.1"
sha2 = "0.10.9"
thiserror = "2.0.12"

[dev-dependencies]
image = "0.25.6"
rand = "0.9.1"
